--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,15 +1,16 @@
 {% set name = "tf_object_detection" %}
-{% set version = "0.0.3" %}
+{% set version = "2.6.0" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 source:
   url: https://github.com/tensorflow/models/archive/v1.13.0.tar.gz
+  # url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/tf-object-detection-{{ version }}.tar.gz
   sha256: 9e762d306888b2bf611a45153a30062d2f40f3afa677df9a6e93efe7bd483832
 
 build:
-  number: 2
+  number: 0
   skip: True  # [win]  # Skip all windows for now due to numpy/scipy version pinning issues
 
 
