--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,6 @@ package:
   version: {{ version }}
 source:
   url: https://github.com/tensorflow/models/archive/v1.13.0.tar.gz
-  # url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/tf-object-detection-{{ version }}.tar.gz
   sha256: 9e762d306888b2bf611a45153a30062d2f40f3afa677df9a6e93efe7bd483832
 
 build:
@@ -57,5 +56,4 @@ extra:
   recipe-maintainers:
     - mxr-conda
     - adbeda
-    - oblute
-    - rluria14
+    - dsangillo
