--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "tf-models-official" %}
+{% set name = "tf_object_detection" %}
 {% set version = "2.6.0" %}
 
 package:
@@ -7,7 +7,7 @@ package:
 source:
   # url: https://github.com/tensorflow/models/archive/v1.13.0.tar.gz
   # url: https://files.pythonhosted.org/packages/fd/f0/b255a0c227fe7d9b1e90dd234eb4832048fb8b5ed356514481bd23169ec2/tf-models-official-2.6.0.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-tf-models-official.tar.gz
   sha256: 95454a9a6c369c77dd2b5a23f37ede21fea59ca0b7e9e2a8cac62acb7e67bd3e
 
 build:
