--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,8 @@ source:
   # url: https://files.pythonhosted.org/packages/fd/f0/b255a0c227fe7d9b1e90dd234eb4832048fb8b5ed356514481bd23169ec2/tf-models-official-2.6.0.tar.gz
   # url: https://pypi.io/packages/source/{{ name[0] }}/tf-models-official/tf-models-official-{{ version }}.tar.gz
   url: https://github.com/tensorflow/models/archive/v{{ version }}.tar.gz
-  sha256: 95454a9a6c369c77dd2b5a23f37ede21fea59ca0b7e9e2a8cac62acb7e67bd3e
+  # sha256: 95454a9a6c369c77dd2b5a23f37ede21fea59ca0b7e9e2a8cac62acb7e67bd3e
+  sha256: 5eb839eef22f2729553f05446be0e517b7dc74334d96f71040b53c4464a2c95c
 
 build:
   number: 0
