--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,14 +19,14 @@ build:
 
 requirements:
   build:
-    - python
+    - python >=3.7
     - setuptools
   host:
-    - python
+    - python >=3.7
     - pip
     - protobuf
   run:
-    - python
+    - python >=3.7
     - tensorflow >=1.12.0
     - numpy >=1.16.1
     - protobuf >=3.0.0
