--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,28 +1,32 @@
 {% set name = "tf_object_detection" %}
-{% set version = "2.1.0" %}
+{% set version = "2.3.0" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 source:
-  url: https://github.com/tensorflow/models/archive/v1.13.0.tar.gz
-  sha256: 9e762d306888b2bf611a45153a30062d2f40f3afa677df9a6e93efe7bd483832
+  # url: https://github.com/tensorflow/models/archive/v1.13.0.tar.gz
+  # url: https://files.pythonhosted.org/packages/fd/f0/b255a0c227fe7d9b1e90dd234eb4832048fb8b5ed356514481bd23169ec2/tf-models-official-2.6.0.tar.gz
+  # url: https://pypi.io/packages/source/{{ name[0] }}/tf-models-official/tf-models-official-{{ version }}.tar.gz
+  url: https://github.com/tensorflow/models/archive/v{{ version }}.tar.gz
+  # sha256: 95454a9a6c369c77dd2b5a23f37ede21fea59ca0b7e9e2a8cac62acb7e67bd3e
+  sha256: 5eb839eef22f2729553f05446be0e517b7dc74334d96f71040b53c4464a2c95c
 
 build:
-  number: 2
+  number: 0
   skip: True  # [win]  # Skip all windows for now due to numpy/scipy version pinning issues
 
 
 requirements:
   build:
-    - python
+    - python >=3.7
     - setuptools
   host:
-    - python
+    - python >=3.7
     - pip
     - protobuf
   run:
-    - python
+    - python >=3.7
     - tensorflow >=1.12.0
     - numpy >=1.16.1
     - protobuf >=3.0.0
