--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
 
 build:
   number: 0
+  script: {{ PYTHON }} -m pip install . -vv
   skip: True  # [win]  # Skip all windows for now due to numpy/scipy version pinning issues
 
 requirements:
