--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,14 +9,10 @@ source:
   sha256: 9e762d306888b2bf611a45153a30062d2f40f3afa677df9a6e93efe7bd483832
 
 build:
+  noarch: python
   number: 1
-  skip: True  # [win]  # Skip all windows for now due to numpy/scipy version pinning issues
-
 
 requirements:
-  build:
-    - python
-    - setuptools
   host:
     - python
     - pip
@@ -30,14 +26,8 @@ requirements:
 
 test:
   imports:
-    # From tensorflow-feedstock:
-    # "Skip the import test on Linux as wheel file require a more recent
-    # version of GLIBC++ than the VM used to build and test package.
-    # Also skip on OSX due to OSX version requirements, see
-    # https://github.com/conda-forge/tensorflow-feedstock/pull/62"
-    - tf_object_detection  # [win]
+    - tf_object_detection
   requires:
-    - tensorflow
     - cython
 
 about:
@@ -45,15 +35,12 @@ about:
   license: Apache-2.0
   license_file: LICENSE
   summary: 'As an open source framework to to construct, train and deploy object detection models'
-
   description: |
     The TensorFlow Object Detection API is an open source
     framework built on top of TensorFlow that makes it easy
     to construct, train and deploy object detection models
 
-
 extra:
   recipe-maintainers:
     - mxr-conda
-    - adbeda
     - dsangillo
