--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,11 +14,11 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - protobuf
   run:
-    - python
+    - python >=3.6
     - tensorflow >=1.12.0
     - numpy >=1.16.1
     - protobuf >=3.0.0
